--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,17 +1,17 @@
 :root {
-  --yellow: #f5c32c;
-  --orange: #fca61f;
+  --yellow: #D2B48C;
+  --orange: #9ACD32;
   --black: #242d49;
   --gray: rgba(36, 45, 73, 0.65);
   --profileShadow: 0px 4px 17px 2px rgba(0, 0, 0, 0.25);
-  --hrColor: #cfcdcd;
+  --hrColor: #8B4513 ;
   --cardColor: rgba(255, 255, 255, 0.64);
-  --buttonBg: linear-gradient(98.63deg, #f9a225 0%, #f95f35 100%);
+  --buttonBg: linear-gradient(98.63deg, #D2B48C 0%, #8B4513 100%);
   --inputColor: rgba(40, 52, 62, 0.07);
   --photo: #4CB256;
   --video: #4A4EB7;
   --location: #EF5757;
---shedule: #E1AE4A;
+  --shedule: #E1AE4A;
 }
 
 .App{
@@ -26,7 +26,8 @@
   width: 22rem;
   height: 14rem;
   border-radius: 50%;
-  background: #6dffe4;
+  background: #533600;
+  ;
   filter: blur(72px);
 
 }
