--- a/client/src/components/LogoSearch/LogoSearch.css
+++ b/client/src/components/LogoSearch/LogoSearch.css
@@ -20,7 +20,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: linear-gradient( 98.63deg, #f9a225 0%, #f95f35 100%);
+    background: linear-gradient(98.63deg, #D2B48C 0%, #8B4513 100%);
     border-radius: 5px;
     padding: 4px;
     color: white;
